# sphinx-obsidian

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
sphinx_obsidian/: __init__.py  main.py  sphinx_parser.py
sphinx_obsidian.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sphinx_obsidian/wikilinks/: __init__.py  index.py
